force-app/main/default/objects/Inbound_Script__c/Inbound_Script__c.object-meta.xml
<CustomObject>
    <label>Inbound VF Verbiage</label>
    <nameField>
        <label>Inbound Script Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inbound VF Verbiages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>