force-app/main/default/objects/Inbound_Script__c/fields/ClusterSection1__c.field-meta.xml
<CustomField>
    <fullName>ClusterSection1__c</fullName>
    <label>Cluster Section 1</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>