force-app/main/default/objects/Inbound_Script__c/fields/ClusterSection4__c.field-meta.xml
<CustomField>
    <fullName>ClusterSection4__c</fullName>
    <label>Cluster Section 4</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>