force-app/main/default/objects/Inbound_Script__c/fields/Consent__c.field-meta.xml
<CustomField>
    <fullName>Consent__c</fullName>
    <label>Consent</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>