force-app/main/default/objects/Inbound_Script__c/fields/Email_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Email_Confirmation__c</fullName>
    <label>Email Confirmation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>