force-app/main/default/objects/Inbound_Script__c/fields/ExpandableSection__c.field-meta.xml
<CustomField>
    <fullName>ExpandableSection__c</fullName>
    <label>Expandable Section</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>