force-app/main/default/objects/Inbound_Script__c/fields/Greetings__c.field-meta.xml
<CustomField>
    <fullName>Greetings__c</fullName>
    <label>Greetings</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>