force-app/main/default/objects/Inbound_Script__c/fields/Industry_Questions__c.field-meta.xml
<CustomField>
    <fullName>Industry_Questions__c</fullName>
    <label>Industry Questions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>