force-app/main/default/objects/Inbound_Script__c/fields/PopupPostCluster__c.field-meta.xml
<CustomField>
    <fullName>PopupPostCluster__c</fullName>
    <label>Cluster Section 2</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>