force-app/main/default/objects/Inbound_Script__c/fields/Thanks__c.field-meta.xml
<CustomField>
    <fullName>Thanks__c</fullName>
    <label>Thanks</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>