force-app/main/default/objects/Inbound_Script__c/recordTypes/ClusterScript.recordType-meta.xml
<RecordType>
    <fullName>ClusterScript</fullName>
    <active>true</active>
    <description>This Record Type Used to only for Cluster Additional Script</description>
    <label>ClusterScript</label>
</RecordType>