force-app/main/default/objects/Inbound_Script__c/recordTypes/Inbound_VF_Verbiage.recordType-meta.xml
<RecordType>
    <fullName>Inbound_VF_Verbiage</fullName>
    <active>true</active>
    <label>Inbound VF Verbiage</label>
</RecordType>